Release Notes

HEAD, planned as v0.28
- adds paste functionality to ROM data editor.
- adds some more ATF150x devices
- adds a external component that is based on a file instead
  of storing the code in the component itself.

v0.27, released on 9. Apr. 2021
- Added fixed point and floating point number formats.
- Adds a dialog to create a behavioral fixture.
- Added a CSV truth table export and import.
- Added a search field to the component tree view.
- Added 74299
- Refactoring of the expression format setting.
  CAUTION: All the general settings are maybe lost at restart!
  To avoid this, open the .digital.cfg file and remove the <entry>
  containing the <string>ExpressionFormat</string> if it's present.

v0.26.1 released on 26. Feb. 2021
- fixes a bug that prevents a short from being detected
  when no component is involved.
- fixes an issue in the importer of logisim hex files.

v0.26, released on 25. Jan. 2021
- Performance improvement of the simulation start.
- Improved the gui to modify the k-map layout.
- Improved testing of processors.
- Improved the layout of fsm transitions in the fsm editor.
- Added French translation. Special thanks to Nicolas Maltais who
  provided the translation.
- Added a "Not Connected" component to output a constant high-z value.
- If a high-z value is connected to a logic gate input, the read value
  is undefined.
- Improved debugging: It is possible to set the circuit to the
  state of a certain test result, by simply clicking on it.
- Generic circuits are easier to debug: It is possible now to create
  a specific, concrete circuit from a generic one.
- In generic circuits it is now possible to add components and
  wires to the circuit programmatically.
- It is now possible to use a probe as output in a test case.
- Adds undo to text fields
- If IEEE shapes are selected in the settings, also the CircuitBuilder
  uses wide shapes in the created circuits.
- Fixed a bug in the Demuxer Verilog template that causes problems