@@ -3,6 +3,7 @@ Release Notes
 HEAD, planned as v0.28
 - adds paste functionality to ROM data editor.
 - adds some more ATF150x devices
+- Probe is able to count edges.
 - adds a external component that is based on a file instead
   of storing the code in the component itself.
 
